[gd_scene load_steps=6 format=3 uid="uid://ffncciksi1tw"]

[ext_resource type="Texture2D" uid="uid://c8egr8gfrmslx" path="res://asssets/ui/menu-bg.jpeg" id="1_va0jy"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_wcff0"]
[ext_resource type="Theme" uid="uid://e1no5yb08xdc" path="res://asssets/ui/menu_theme.tres" id="2_b784e"]
[ext_resource type="PackedScene" uid="uid://ctrpcugl5crl" path="res://scenes/components/network_type_indicator/netowork_type_indicator.tscn" id="3_2yf0r"]
[ext_resource type="FontFile" uid="uid://f7a8vjj11u4c" path="res://asssets/ui/SuperNormal-xRoj5.ttf" id="4_mmjro"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcff0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBackground" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_va0jy")
expand_mode = 2

[node name="Menu" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NetoworkTypeIndicator" parent="Menu" instance=ExtResource("3_2yf0r")]
layout_mode = 1

[node name="Exit" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 52.0
offset_right = -39.0
offset_bottom = 103.0
grow_horizontal = 0
theme = ExtResource("2_b784e")
theme_override_font_sizes/font_size = 48
text = "Exit"
flat = true

[node name="HostGame" type="Button" parent="Menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 59.0
offset_top = 51.0
offset_right = 312.0
offset_bottom = 102.0
theme = ExtResource("2_b784e")
text = "Host Game"
flat = true

[node name="JoinGame" type="Button" parent="Menu"]
layout_mode = 2
offset_left = 59.0
offset_top = 106.0
offset_right = 312.0
offset_bottom = 157.0
theme = ExtResource("2_b784e")
text = "Join Game"
flat = true

[node name="ListLobbies" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 971.0
offset_top = 124.0
offset_right = 1082.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("4_mmjro")
text = "ListLobbies"

[node name="SwitchNetwork" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 600.0
offset_top = 4.0
offset_right = 795.0
offset_bottom = 35.0
text = "Switch Networking Type"

[node name="Lobbies" type="ScrollContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 177.0
offset_right = -103.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Lobbies"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
